--- a/assets/sass/pages/_about.sass
+++ b/assets/sass/pages/_about.sass
@@ -199,10 +199,10 @@
       grid-column: 1 / span all
 
       // Override defaut font resizing
-      +adapt-reverse($width-mobile)
-        font-size: 40px
-        line-height: 52px
-        letter-spacing: -1px
+      // +adapt-reverse($width-mobile)
+      //   font-size: 40px
+      //   line-height: 52px
+      //   letter-spacing: -1px
 
     &-blocs
       @extend .gridSystem
